--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.2.5",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
+    "@angular/material": "^20.2.5",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "highcharts": "^12.4.0",
+    "highcharts-angular": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
