--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.3.0",
     "highcharts": "^12.4.0",
     "highcharts-angular": "^5.1.0",
+    "ngx-skeleton-loader": "^11.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
